--- a/app/css/fonts.css
+++ b/app/css/fonts.css
@@ -78,4 +78,12 @@
   font-style: normal;
 }
 
+/* font-family: "Oswald-Medium" */
+@font-face {
+  font-family: "Oswald";
+  src: url("../fonts/Oswald/Oswald-Medium.ttf");
+  font-weight: 500;
+  font-style: normal;
+}
+
 /* end_fonts */
