--- a/app/css/main.css
+++ b/app/css/main.css
@@ -43,11 +43,14 @@ body {
   font-weight: normal;
   font-style: normal;
   overflow-x: hidden;
+  background-color: #fff;
 }
 
 /* Шапка сайта */
 .header {
   box-shadow: 0 7px 12px 0 rgba(0, 0, 0, 0.03), inset 0 -1px 0 0 #f3f3f3;
+  z-index: 3;
+  position: relative;
 }
 
 .header__line {
@@ -89,6 +92,128 @@ body {
   z-index: 1;
   display: block;
   position: absolute;
+}
+
+.header__h-catalog.active::after {
+  display: none;
+}
+
+/* page */
+.body-white-line {
+  width: 372px;
+  left: 0;
+  height: auto;
+  position: absolute;
+  top: 199px;
+  bottom: 0;
+  z-index: 2;
+  background-color: #fff;
+  border-right: 1px solid #f3f3f3;
+}
+
+.standart-section {
+  background-color: transparent;
+  position: relative;
+}
+
+.standart-section__img {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  z-index: 1;
+}
+
+.white-section {
+  background-color: #fff;
+  position: relative;
+}
+
+.white-section .page__p-sectionwrapper {
+  margin-top: 64px;
+}
+
+.white-section__img {
+  position: absolute;
+  right: -180px;
+  top: -137px;
+}
+
+.page {
+  margin-left: 372px;
+  background-color: #f7f7f7;
+}
+
+.page__p-indexbanner {
+  margin-bottom: -30px;
+}
+
+.page__p-redbaner {
+  margin-top: -143px;
+}
+
+.page__p-sectionwrapper {
+  position: relative;
+  margin-top: 80px;
+  margin-bottom: 30px;
+  padding-right: 350px;
+}
+
+.page__p-sectionslider {
+  position: absolute;
+  right: 0;
+  top: 20px;
+}
+
+.page__p-carousel {
+  margin-bottom: 77px;
+}
+
+.page__p-sectioninfo {
+  position: absolute;
+  right: 0;
+  top: 13px;
+}
+
+.page__p-recipes {
+  padding-bottom: 86px;
+}
+
+/* Подвал сайта */
+.footer {
+  margin-left: 372px;
+  background-color: #f7f7f7;
+}
+
+.footer__top {
+  background-image: url(../img/footer-bg.png);
+  background-size: auto 100%;
+  height: 225px;
+  background-position: right top;
+  padding-bottom: 28px;
+}
+
+.footer__top .container {
+  height: 100%;
+}
+
+.footer__top .row {
+  height: 100%;
+}
+
+.footer__center {
+  padding-top: 40px;
+  padding-bottom: 50px;
+  background-color: #fff;
+}
+
+.footer__bottom {
+  background-color: #f3f3f3;
+  padding: 14px 0;
+}
+
+.footer__f-col {
+  width: 25%;
+  float: left;
 }
 
 /**/
@@ -210,8 +335,7 @@ body {
 }
 
 .h-catalog__toggle {
-  width: 372px;
-  border-right: 1px solid #f3f3f3;
+  width: 371px;
   background-color: #fff;
   position: absolute;
   left: 0;
@@ -344,6 +468,724 @@ body {
 
 .h-nav__lang .ui-button .ui-icon {
   display: none;
+}
+
+/* Главная страница */
+.p-indexbanner {
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  position: relative;
+  height: 688px;
+}
+
+.p-indexbanner::after {
+  content: '';
+  height: 219px;
+  left: 0;
+  right: 0;
+  background-image: linear-gradient(to top, #f7f7f7 12%, rgba(247, 247, 247, 0));
+  display: block;
+  position: absolute;
+  bottom: 0;
+}
+
+.p-indexbanner__title {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  color: #521e12;
+  font-size: 48px;
+  left: 107px;
+  font-weight: bold;
+  line-height: 62px;
+}
+
+.p-questions {
+  padding: 52px 41px;
+  background-color: #fff;
+  height: 453px;
+  background-repeat: no-repeat;
+  background-position: right bottom;
+}
+
+.p-questions__title {
+  display: block;
+  padding-top: 20px;
+  position: relative;
+  color: #1c1c1c;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 34px;
+}
+
+.p-questions__title::before {
+  content: '';
+  display: block;
+  width: 34px;
+  height: 4px;
+  background-color: #db3333;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.p-questions__list {
+  padding-top: 18px;
+}
+
+.p-questions__item {
+  display: block;
+  padding-bottom: 12px;
+}
+
+.p-questions__item:last-child {
+  padding-bottom: 0;
+}
+
+.p-questions__link {
+  display: inline-block;
+  text-decoration: none;
+  color: #1c1c1c;
+  line-height: 23px;
+  opacity: .7;
+}
+
+.p-questions__link:hover {
+  opacity: 1;
+  text-decoration: none;
+  color: #1c1c1c;
+}
+
+.p-questions-last {
+  height: 255px;
+}
+
+.p-questions-last .p-questions__list::after {
+  clear: both;
+  content: "";
+  display: table;
+}
+
+.p-questions-last .p-questions__item {
+  width: 45%;
+  float: left;
+}
+
+.p-redbaner {
+  background-color: #db3333;
+  padding: 0 41px 52px;
+  margin-bottom: 30px;
+  height: 311px;
+  position: relative;
+}
+
+.p-redbaner__count {
+  font-family: "Georgia";
+  font-weight: bold;
+  color: #fff;
+  font-size: 99.6px;
+  line-height: 124px;
+}
+
+.p-redbaner__description {
+  line-height: 23px;
+  color: #fff;
+  display: block;
+  margin-top: 10px;
+}
+
+.p-redbaner__button {
+  position: absolute;
+  bottom: 40px;
+  left: 41px;
+  color: #fff;
+  line-height: 38px;
+  padding-left: 62px;
+  text-decoration: none;
+}
+
+.p-redbaner__button::before {
+  content: '';
+  width: 38px;
+  height: 38px;
+  display: block;
+  background-image: url(../img/icons/white-btn-arrow.svg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: contain;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.p-sectiontitle {
+  color: #1c1c1c;
+  font-size: 40px;
+  letter-spacing: 1.2px;
+  line-height: 60px;
+  display: block;
+  font-family: "Oswald", sans-serif;
+  font-weight: 500;
+}
+
+.p-sectionslider {
+  font-size: 0;
+}
+
+.p-sectionslider::after {
+  clear: both;
+  content: "";
+  display: table;
+}
+
+.p-sectionslider span {
+  color: #db3333;
+  line-height: 28px;
+  display: inline-block;
+  font-size: 16px;
+  float: left;
+  margin-right: 36px;
+}
+
+.p-sectionslider__arrow {
+  width: 28px;
+  height: 28px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+  display: inline-block;
+  text-decoration: none;
+}
+
+.p-sectionslider__prev {
+  background-image: url(../img/icons/slider-prev-red.svg);
+}
+
+.p-sectionslider__next {
+  background-image: url(../img/icons/slider-next-red.svg);
+  margin-left: 10px;
+}
+
+.p-carousel .owl-stage-outer::before {
+  content: '';
+  display: block;
+  position: absolute;
+  right: 100%;
+  width: 9999px;
+  top: 0;
+  bottom: 0;
+  z-index: 1;
+}
+
+.p-carousel .owl-stage-outer::after {
+  content: '';
+  display: block;
+  position: absolute;
+  left: 100%;
+  width: 9999px;
+  top: 0;
+  bottom: 0;
+  background: -moz-linear-gradient(left, rgba(247, 247, 247, 0) 0%, #f7f7f7 1%, white 100%);
+  background: -webkit-linear-gradient(left, rgba(247, 247, 247, 0) 0%, #f7f7f7 1%, white 100%);
+  background: linear-gradient(to right, rgba(247, 247, 247, 0) 0%, #f7f7f7 1%, white 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00f7f7f7', endColorstr='#ffffff',GradientType=1 );
+  z-index: 1;
+}
+
+.p-prodelement {
+  padding: 20px 14px 0 15px;
+  background-color: #fff;
+  position: relative;
+  height: 347px;
+}
+
+.p-prodelement__block {
+  position: absolute;
+  left: 15px;
+  top: 14px;
+  z-index: 1;
+}
+
+.p-prodelement__new {
+  font-size: 12px;
+  text-transform: uppercase;
+  color: #db3333;
+  line-height: 18px;
+  font-weight: bold;
+}
+
+.p-prodelement__stock {
+  text-transform: uppercase;
+  color: #f5a813;
+  font-weight: bold;
+  font-size: 12px;
+}
+
+.p-prodelement__stock span {
+  color: #fff;
+  padding: 0 4px;
+  background-color: #f5a813;
+  height: 18px;
+  font-size: 12px;
+  position: relative;
+  top: -1px;
+  margin-left: 4px;
+  border-radius: 2px;
+}
+
+.p-prodelement__fav {
+  position: absolute;
+  top: 14px;
+  right: 14px;
+  z-index: 1;
+}
+
+.p-prodelement__fav svg {
+  width: 18px;
+}
+
+.p-prodelement__top {
+  height: 170px;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  margin-bottom: 16px;
+}
+
+.p-prodelement__img {
+  display: block;
+  max-height: 100%;
+  max-width: 100%;
+  width: auto !important;
+  height: auto;
+}
+
+.p-prodelement__tag {
+  color: #a4a4a4;
+  font-size: 14px;
+  line-height: 21px;
+  margin-bottom: 7px;
+  font-weight: 500;
+}
+
+.p-prodelement__description {
+  color: #606060;
+  font-size: 14px;
+  line-height: 22px;
+  display: block;
+  padding-bottom: 16px;
+  min-height: 44px;
+  overflow: hidden;
+  font-weight: 500;
+}
+
+.p-prodelement__bottom {
+  position: relative;
+}
+
+.p-prodelement__oldprice {
+  display: block;
+  width: 100%;
+  position: absolute;
+  top: -16px;
+  left: 0;
+}
+
+.p-prodelement__oldprice span {
+  font-size: 12px;
+  line-height: 18px;
+  position: relative;
+  display: inline-block;
+  color: #606060;
+}
+
+.p-prodelement__oldprice span::after {
+  content: '';
+  height: 1px;
+  left: 0;
+  right: 0;
+  display: block;
+  position: absolute;
+  top: 50%;
+  margin-top: -.5px;
+  background-color: #f5a813;
+}
+
+.p-prodelement__price {
+  padding-right: 7px;
+  font-size: 14px;
+  color: #606060;
+  line-height: 30px;
+  position: relative;
+  padding-right: 16px;
+  display: inline-block;
+}
+
+.p-prodelement__price b {
+  color: #1c1c1c;
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 30px;
+  margin-right: 8px;
+}
+
+.p-prodelement__price::after {
+  content: '';
+  width: 9px;
+  height: 5px;
+  display: block;
+  background-image: url(../img/icons/little-like-red.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center center;
+  position: absolute;
+  right: 0;
+  top: 17px;
+}
+
+.p-prodelement__basket {
+  float: right;
+  margin-top: 8px;
+}
+
+.p-neededhelp {
+  height: 188px;
+  background-color: #1b1c20;
+  padding: 0 32px 28px;
+  position: relative;
+}
+
+.p-neededhelp .row {
+  height: 100%;
+}
+
+.p-neededhelp::after {
+  content: '';
+  display: block;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  position: absolute;
+  background-image: url(../img/neededhelp-bg.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.p-neededhelp__left {
+  position: relative;
+  z-index: 2;
+}
+
+.p-neededhelp__title {
+  font-size: 24px;
+  line-height: 35px;
+  color: #fff;
+  font-weight: bold;
+}
+
+.p-neededhelp__description {
+  margin-top: 17px;
+  font-size: 18px;
+  line-height: 27px;
+  opacity: .6;
+  color: #fff;
+}
+
+.p-neededhelp__right {
+  position: relative;
+  z-index: 2;
+  padding-left: 30px;
+}
+
+.p-neededhelp__form {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.p-neededhelp__input {
+  display: block;
+  height: 64px;
+  line-height: 100%;
+  border: 1px solid #fff;
+  background-color: #fff;
+  padding-left: 23px;
+  padding-right: 23px;
+  box-shadow: 0 4px 24px 0 rgba(0, 0, 0, 0.3);
+  font-size: 18px;
+  border-radius: 2px;
+  color: #1c1c1c;
+  width: 100%;
+}
+
+.p-neededhelp__button {
+  background-color: #db3333;
+  box-shadow: 0 4px 24px 0 rgba(0, 0, 0, 0.3);
+  border-radius: 2px;
+  min-width: 162px;
+  width: 162px;
+  height: 64px;
+  border: 1px solid #db3333;
+  line-height: 100%;
+  text-align: center;
+  display: block;
+  color: #fff;
+  font-weight: 500;
+  font-family: "Lato";
+  margin: 0 0 0 12px;
+  padding: 0;
+  cursor: pointer;
+}
+
+.p-sectioninfo {
+  padding-left: 93px;
+  position: relative;
+}
+
+.p-sectioninfo__count {
+  position: absolute;
+  display: inline-block;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  font-size: 40px;
+  font-weight: bold;
+  font-family: "Georgia", sans-serif;
+  color: #db3333;
+}
+
+.p-sectioninfo__description {
+  color: #1c1c1c;
+  line-height: 19.5px;
+}
+
+.p-recipes__top {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  height: 280px;
+  margin-bottom: 24px;
+}
+
+.p-recipes__description {
+  font-weight: bold;
+  line-height: 23.33333px;
+  margin-bottom: 12px;
+  min-height: 70px;
+  color: #606060;
+}
+
+.p-recipes__set {
+  line-height: 24px;
+  color: #db3333;
+  display: inline-block;
+  margin-right: 16px;
+  position: relative;
+  text-decoration: none;
+  border-bottom: 1px dashed #db3333;
+  font-weight: 500;
+}
+
+.p-recipes__set::after {
+  content: '';
+  display: block;
+  width: 9px;
+  height: 5px;
+  background-image: url(../img/icons/little-like-red.svg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: contain;
+  position: absolute;
+  right: -16px;
+  top: 11px;
+}
+
+.p-recipes__bottom {
+  margin-top: 27px;
+}
+
+.p-recipes__bottom::after {
+  clear: both;
+  content: "";
+  display: table;
+}
+
+.p-recipes__price {
+  line-height: 40px;
+  color: #1c1c1c;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.p-recipes__btn {
+  float: right;
+  height: 40px;
+  padding-left: 50px;
+  padding-right: 16px;
+  color: #fff;
+  font-weight: 500;
+  line-height: 38px;
+  background-color: #1c1c1c;
+  border: 1px solid #1c1c1c;
+  position: relative;
+  text-decoration: none;
+}
+
+.p-recipes__btn svg {
+  left: 14px;
+  top: 11px;
+  position: absolute;
+  display: block;
+}
+
+.p-recipes__btn:hover {
+  opacity: .7;
+  text-decoration: none;
+  color: #fff;
+}
+
+.p-news {
+  background-color: #fff;
+}
+
+.p-news .p-recipes__top {
+  margin-bottom: 12px;
+}
+
+.p-news__wrapper {
+  padding-bottom: 16px;
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
+.p-news__data {
+  color: #a4a4a4;
+  font-size: 14px;
+  font-weight: 500;
+  display: block;
+  line-height: 21px;
+  margin-bottom: 7px;
+}
+
+.p-news .p-recipes__description {
+  min-height: 48px;
+}
+
+.p-news__detal {
+  color: #db3333;
+  line-height: 24px;
+  display: inline-block;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+.p-news__detal:hover {
+  text-decoration: none;
+  opacity: .7;
+  color: #db3333;
+}
+
+.f-nav__title {
+  color: #a4a4a4;
+  font-size: 18px;
+  line-height: 29px;
+}
+
+.f-nav__list {
+  padding-top: 15px;
+  display: block;
+}
+
+.f-nav__item {
+  display: block;
+  width: 100%;
+  padding-bottom: 12px;
+}
+
+.f-nav__item:last-child {
+  padding-bottom: 0;
+}
+
+.f-nav__link {
+  color: #1c1c1c;
+  text-decoration: none;
+}
+
+.f-nav__link:hover {
+  text-decoration: none;
+  color: #1c1c1c;
+  opacity: .7;
+}
+
+.f-contacts {
+  text-align: right;
+}
+
+.f-contacts__phone {
+  color: #1c1c1c;
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 29px;
+  margin-bottom: 13px;
+  display: block;
+}
+
+.f-contacts__email {
+  color: #db3333;
+  font-size: 18px;
+  line-height: 27px;
+  display: block;
+  margin-bottom: 20px;
+}
+
+.f-contacts__social {
+  font-size: 0;
+  text-align: right;
+}
+
+.f-contacts__item {
+  display: inline-block;
+  margin-left: 22px;
+}
+
+.f-contacts__item:last-child {
+  margin-left: 0;
+}
+
+.f-contacts__link {
+  width: 24px;
+  height: 24px;
+  text-align: center;
+  display: block;
+}
+
+.f-contacts__link svg {
+  display: inline-block;
+}
+
+.f-copy {
+  color: #a4a4a4;
+  font-size: 14px;
+  display: block;
+  text-align: center;
+  line-height: 18px;
+  font-weight: 500;
 }
 
 /**/
