--- a/sass/_elements.sass
+++ b/sass/_elements.sass
@@ -101,8 +101,7 @@
 
 .h-catalog
 	&__toggle
-		width: 372px
-		border-right: 1px solid #f3f3f3
+		width: 371px
 		background-color: #fff
 		position: absolute
 		left: 0
@@ -215,5 +214,554 @@
 		.ui-button .ui-icon
 			display: none
 
+/* Главная страница */
+.p-indexbanner
+	background-repeat: no-repeat
+	background-position: center center
+	background-size: cover
+	position: relative
+	height: 688px
+	&::after
+		content: ''
+		height: 219px
+		left: 0
+		right: 0
+		background-image: linear-gradient(to top, #f7f7f7 12%, rgba(247, 247, 247, 0));
+		display: block
+		position: absolute
+		bottom: 0
+	&__title
+		position: absolute
+		top: 50%
+		transform: translateY(-50%)
+		-webkit-transform: translateY(-50%)
+		color: $redblack
+		font-size: 48px
+		left: 107px
+		font-weight: bold
+		line-height: 62px
+
+.p-questions
+	padding: 52px 41px
+	background-color: #fff
+	height: 453px
+	background-repeat: no-repeat
+	background-position: right bottom
+	&__title
+		display: block
+		padding-top: 20px
+		position: relative
+		color: $black
+		font-size: 24px
+		font-weight: bold
+		line-height: 34px
+		&::before
+			content: ''
+			display: block
+			width: 34px
+			height: 4px
+			background-color: $red
+			position: absolute
+			left: 0
+			top: 0
+	&__list
+		padding-top: 18px
+	&__item
+		display: block
+		padding-bottom: 12px
+		&:last-child
+			padding-bottom: 0
+	&__link
+		display: inline-block
+		text-decoration: none
+		color: $black
+		line-height: 23px
+		opacity: .7
+		&:hover
+			opacity: 1
+			text-decoration: none
+			color: $black
+	&-last
+		height: 255px
+		.p-questions__list
+			@include clearfix
+		.p-questions__item
+			width: 45%
+			float: left
+
+.p-redbaner
+	background-color: $red
+	padding: 0 41px 52px
+	margin-bottom: 30px
+	height: 311px
+	position: relative
+	&__count
+		font-family: "Georgia"
+		font-weight: bold
+		color: #fff
+		font-size: 99.6px
+		line-height: 124px
+	&__description
+		line-height: 23px
+		color: #fff
+		display: block
+		margin-top: 10px
+	&__button
+		position: absolute
+		bottom: 40px
+		left: 41px
+		color: #fff
+		line-height: 38px
+		padding-left: 38 + 24 + px
+		text-decoration: none
+		&::before
+			content: ''
+			width: 38px
+			height: 38px
+			display: block
+			background-image: url(../img/icons/white-btn-arrow.svg)
+			background-repeat: no-repeat
+			background-position: center center
+			background-size: contain
+			position: absolute
+			left: 0
+			top: 0
+
+.p-sectiontitle
+	color: $black
+	font-size: 40px
+	letter-spacing: 1.2px
+	line-height: 60px
+	display: block
+	font-family: "Oswald", sans-serif
+	font-weight: 500
+
+.p-sectionslider
+	font-size: 0
+	@include clearfix
+	span
+		color: $red
+		line-height: 28px
+		display: inline-block
+		font-size: 16px
+		float: left
+		margin-right: 36px
+	&__arrow
+		width: 28px
+		height: 28px
+		background-size: contain
+		background-repeat: no-repeat
+		background-position: center center
+		display: inline-block
+		text-decoration: none
+	&__prev
+		background-image: url(../img/icons/slider-prev-red.svg)
+	&__next
+		background-image: url(../img/icons/slider-next-red.svg)
+		margin-left: 10px
+
+.p-carousel
+	.owl-stage-outer
+		//overflow: visible
+		&::before
+			content: ''
+			display: block
+			position: absolute
+			right: 100%
+			width: 9999px
+			top: 0
+			bottom: 0
+			background-color:
+			z-index: 1
+		&::after
+			content: ''
+			display: block
+			position: absolute
+			left: 100%
+			width: 9999px
+			top: 0
+			bottom: 0
+			background: -moz-linear-gradient(left, rgba(247,247,247,0) 0%, rgba(247,247,247,1) 1%, rgba(255,255,255,1) 100%)
+			background: -webkit-linear-gradient(left, rgba(247,247,247,0) 0%,rgba(247,247,247,1) 1%,rgba(255,255,255,1) 100%)
+			background: linear-gradient(to right, rgba(247,247,247,0) 0%,rgba(247,247,247,1) 1%,rgba(255,255,255,1) 100%)
+			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00f7f7f7', endColorstr='#ffffff',GradientType=1 )
+			z-index: 1
+	&__item
+
+.p-prodelement
+	padding: 20px 14px 0 15px
+	background-color: #fff
+	position: relative
+	height: 347px
+	&__block
+		position: absolute
+		left: 15px
+		top: 14px
+		z-index: 1
+	&__new
+		font-size: 12px
+		text-transform: uppercase
+		color: $red
+		line-height: 18px
+		font-weight: bold
+	&__stock
+		text-transform: uppercase
+		color: #f5a813
+		font-weight: bold
+		font-size: 12px
+		span
+			color: #fff
+			padding: 0 4px
+			background-color: #f5a813
+			height: 18px
+			font-size: 12px
+			position: relative
+			top: -1px
+			margin-left: 4px
+			border-radius: 2px
+	&__fav
+		position: absolute
+		top: 14px
+		right: 14px
+		z-index: 1
+		svg
+			width: 18px
+	&__top
+		height: 147 + 23 + px
+		display: -webkit-flex
+		display: -moz-flex
+		display: -ms-flex
+		display: -o-flex
+		display: flex
+		justify-content: center
+		align-items: flex-end
+		margin-bottom: 16px
+	&__img
+		display: block
+		max-height: 100%
+		max-width: 100%
+		width: auto !important
+		height: auto
+	&__tag
+		color: $graylight
+		font-size: 14px
+		line-height: 21px
+		margin-bottom: 7px
+		font-weight: 500
+	&__description
+		color: $gray
+		font-size: 14px
+		line-height: 22px
+		display: block
+		padding-bottom: 16px
+		min-height: 44px
+		overflow: hidden
+		font-weight: 500
+	&__bottom
+		position: relative
+	&__oldprice
+		display: block
+		width: 100%
+		position: absolute
+		top: -16px
+		left: 0
+		span
+			font-size: 12px
+			line-height: 18px
+			position: relative
+			display: inline-block
+			color: $gray
+			&::after
+				content: ''
+				height: 1px
+				left: 0
+				right: 0
+				display: block
+				position: absolute
+				top: 50%
+				margin-top: -.5px
+				background-color: #f5a813
+
+	&__price
+		padding-right: 7px
+		font-size: 14px
+		color: $gray
+		line-height: 30px
+		position: relative
+		padding-right: 16px
+		display: inline-block
+		b
+			color: $black
+			font-size: 20px
+			font-weight: bold
+			line-height: 30px
+			margin-right: 8px
+		&::after
+			content: ''
+			width: 9px
+			height: 5px
+			display: block
+			background-image: url(../img/icons/little-like-red.svg)
+			background-repeat: no-repeat
+			background-size: contain
+			background-position: center center
+			position: absolute
+			right: 0
+			top: 17px
+	&__basket
+		float: right
+		margin-top: 8px
+		svg
+
+.p-neededhelp
+	height: 188px
+	background-color: #1b1c20
+	padding: 0 32px 28px
+	position: relative
+	.row
+		height: 100%
+	&::after
+		content: ''
+		display: block
+		left: 0
+		right: 0
+		top: 0
+		bottom: 0
+		width: 100%
+		height: 100%
+		z-index: 1
+		position: absolute
+		background-image: url(../img/neededhelp-bg.png)
+		background-size: cover
+		background-repeat: no-repeat
+		background-position: center center
+	&__left
+		position: relative
+		z-index: 2
+	&__title
+		font-size: 24px
+		line-height: 35px
+		color: #fff
+		font-weight: bold
+	&__description
+		margin-top: 17px
+		font-size: 18px
+		line-height: 27px
+		opacity: .6
+		color: #fff
+	&__right
+		position: relative
+		z-index: 2
+		padding-left: 30px
+	&__form
+		display: -webkit-flex
+		display: -moz-flex
+		display: -ms-flex
+		display: -o-flex
+		display: flex
+		justify-content: space-between
+		width: 100%
+	&__input
+		display: block
+		height: 64px
+		line-height: 100%
+		border: 1px solid #fff
+		background-color: #fff
+		padding-left: 23px
+		padding-right: 23px
+		box-shadow: 0 4px 24px 0 rgba(0, 0, 0, 0.3)
+		font-size: 18px
+		border-radius: 2px
+		color: $black
+		width: 100%
+	&__button
+		background-color: $red
+		box-shadow: 0 4px 24px 0 rgba(0, 0, 0, 0.3)
+		border-radius: 2px
+		min-width: 162px
+		width: 162px
+		height: 64px
+		border: 1px solid $red
+		line-height: 100%
+		text-align: center
+		display: block
+		color: #fff
+		font-weight: 500
+		font-family: "Lato"
+		margin: 0 0 0 12px
+		padding: 0
+		cursor: pointer
+
+.p-sectioninfo
+	padding-left: 78 + 15 + px
+	position: relative
+	&__count
+		position: absolute
+		display: inline-block
+		left: 0
+		top: 50%
+		transform: translateY(-50%)
+		-webkit-transform: translateY(-50%)
+		font-size: 40px
+		font-weight: bold
+		font-family: "Georgia", sans-serif
+		color: $red
+	&__description
+		color: $black
+		line-height: 19.5px
+
+.p-recipes
+	&__top
+		background-size: cover
+		background-repeat: no-repeat
+		background-position: center center
+		height: 280px
+		margin-bottom: 24px
+	&__description
+		font-weight: bold
+		line-height: 70 / 3 + px
+		margin-bottom: 12px
+		min-height: 70px
+		color: #606060
+	&__set
+		line-height: 24px
+		color: $red
+		display: inline-block
+		margin-right: 16px
+		position: relative
+		text-decoration: none
+		border-bottom: 1px dashed $red
+		font-weight: 500
+		&::after
+			content: ''
+			display: block
+			width: 9px
+			height: 5px
+			background-image: url(../img/icons/little-like-red.svg)
+			background-repeat: no-repeat
+			background-position: center center
+			background-size: contain
+			position: absolute
+			right: -16px
+			top: 11px
+	&__bottom
+		margin-top: 27px
+		@include clearfix
+	&__price
+		line-height: 40px
+		color: $black
+		font-size: 20px
+		font-weight: bold
+	&__btn
+		float: right
+		height: 40px
+		padding-left: 50px
+		padding-right: 16px
+		color: #fff
+		font-weight: 500
+		line-height: 38px
+		background-color: $black
+		border: 1px solid $black
+		position: relative
+		text-decoration: none
+		svg
+			left: 14px
+			top: 11px
+			position: absolute
+			display: block
+		&:hover
+			opacity: .7
+			text-decoration: none
+			color: #fff
+
+.p-news
+	background-color: #fff
+	.p-recipes__top
+		margin-bottom: 12px
+	&__wrapper
+		padding-bottom: 16px
+		padding-left: 24px
+		padding-right: 24px
+	&__data
+		color: $graylight
+		font-size: 14px
+		font-weight: 500
+		display: block
+		line-height: 21px
+		margin-bottom: 7px
+	.p-recipes__description
+		min-height: 48px
+	&__detal
+		color: $red
+		line-height: 24px
+		display: inline-block
+		text-decoration: none
+		font-size: 16px
+		&:hover
+			text-decoration: none
+			opacity: .7
+			color: $red
+
+.f-nav
+	&__title
+		color: $graylight
+		font-size: 18px
+		line-height: 29px
+	&__list
+		padding-top: 15px
+		display: block
+	&__item
+		display: block
+		width: 100%
+		padding-bottom: 12px
+		&:last-child
+			padding-bottom: 0
+	&__link
+		color: $black
+		text-decoration: none
+		&:hover
+			text-decoration: none
+			color: $black
+			opacity: .7
+
+
+.f-contacts
+	text-align: right
+	&__phone
+		color: $black
+		font-size: 18px
+		font-weight: bold
+		line-height: 29px
+		margin-bottom: 13px
+		display: block
+	&__email
+		color: $red
+		font-size: 18px
+		line-height: 27px
+		display: block
+		margin-bottom: 20px
+	&__social
+		font-size: 0
+		text-align: right
+	&__item
+		display: inline-block
+		margin-left: 22px
+		&:last-child
+			margin-left: 0
+	&__link
+		width: 24px
+		height: 24px
+		text-align: center
+		display: block
+		svg
+			display: inline-block
+
+.f-copy
+	color: $graylight
+	font-size: 14px
+	display: block
+	text-align: center
+	line-height: 18px
+	font-weight: 500
 
 /**/
