--- a/sass/fonts.sass
+++ b/sass/fonts.sass
@@ -68,4 +68,11 @@
 	font-weight: bold
 	font-style: normal
 
+/* font-family: "Oswald-Medium" */
+@font-face
+	font-family: "Oswald"
+	src: url("../fonts/Oswald/Oswald-Medium.ttf")
+	font-weight: 500
+	font-style: normal
+
 /* end_fonts */
