--- a/sass/_blocks.sass
+++ b/sass/_blocks.sass
@@ -102,6 +102,7 @@ body
 .page
 	margin-left: 372px
 	background-color: #f7f7f7
+	overflow-x: hidden
 	&-index
 	&__p-indexbanner
 		margin-bottom: -30px
@@ -134,7 +135,7 @@ body
 	background-color: #f7f7f7
 	&__top
 		background-image: url(../img/footer-bg.png)
-		background-size: auto 100%
+		background-size: cover
 		height: 225px
 		background-position: right top
 		padding-bottom: 28px
