--- a/sass/media.sass
+++ b/sass/media.sass
@@ -3,27 +3,357 @@
 /*==========  Desktop First Method  ==========*/
 
 /* Large Devices, Wide Screens */
-@media only screen and (max-width : 1200px)
+@media only screen and (max-width : 1599px)
+	.h-search
+		width: 440px
+	.p-redbaner__count
+		font-size: 64px
+		line-height: 78px
+	.p-redbaner
+		padding: 20px 30px 30px
+	.p-prodelement__description
+		margin-bottom: 16px
+		padding-bottom: 0
+		height: 44px
+		min-height: auto
+		overflow: hidden
+	.p-questions-last .p-questions__item
+		width: 50%
 	/**/
 
+/* Large Devices, Wide Screens */
+@media only screen and (max-width : 1399px)
+	.h-nav__list
+		padding-left: 15px
+	.h-catalog__toggle
+		left: -100%
+	.body-white-line
+		left: -100%
+	.page
+		margin-left: 0
+	.footer
+		margin-left: 0
+	/**/
+
+/* Large Devices, Wide Screens */
+@media only screen and (max-width : 1359px)
+	.h-search
+		width: 278px
+	/**/
+
+/* Large Devices, Wide Screens */
+@media only screen and (max-width : 1199px)
+	.header__h-info
+		display: none
+	.h-catalog__button
+		font-size: 16px
+	.h-nav__link
+		font-size: 16px
+	.h-nav__lang .ui-selectmenu-text
+		font-size: 16px
+	.h-catalog__link
+		font-size: 16px
+	.h-catalog__item
+		margin-bottom: 15px
+	.h-catalog__toggle
+		padding-top: 30px
+	.header__h-catalog,
+	.body-white-line,
+	.h-catalog__toggle
+		width: 320px
+	.header__bottom
+		padding-left: 320px
+	.h-catalog__toggle
+		padding-right: 15px
+		padding-top: 15px
+	.header__h-catalog
+		padding-right: 15px
+	.h-nav__list
+		padding-left: 0
+	.h-catalog__button,
+	.h-phone__link,
+	.h-search__input,
+	.h-nav__link,
+	.h-nav__lang .ui-selectmenu-text,
+	.p-questions__link
+		font-size: 14px
+	body
+		font-size: 14px
+	/**/
 
 /* Medium Devices, Desktops */
-@media only screen and (max-width : 992px)
+@media only screen and (max-width : 1069px)
+
+	.h-buttons__link svg
+		height: 20px
+	.p-questions__item
+		padding-bottom: 8px
+	.white-section__img
+		width: 230px
+		right: -120px
+		top: -95px
+	.p-recipes__description
+		height: 70px
+		overflow: hidden
+	.body-white-line
+		z-index: 3
+	/**/
+
+/* Medium Devices, Desktops */
+@media only screen and (max-width : 991px)
+	.p-indexbanner
+		height: 615 - 141 + px
+	.header__h-catalog
+		padding: 12px 15px
+	.h-nav__list
+		padding-top: 21px
+		padding-bottom: 21px
+	.header__h-catalog
+		width: 141px
+	.h-catalog__button
+		font-size: 12px
+		height: 36px
+		line-height: 36px
+	.h-catalog__button span
+		padding-right: 0
+	.h-catalog__button span::after
+		display: none
+	.header__bottom
+		padding-left: 141px
+	.h-nav__list
+		padding-top: 11px
+		padding-bottom: 11px
+	.h-nav__link,
+	.h-nav__lang .ui-selectmenu-text,
+	.h-catalog__link
+		font-size: 12px
+	.h-nav__lang .ui-selectmenu-button.ui-button
+		width: 38px
+	.h-nav__lang .ui-selectmenu-button.ui-button::after
+		top: 16px
+	.h-catalog__toggle
+		left: -320px
+	.header__h-catalog::after
+		display: none !important
+	.h-phone__link
+		font-size: 16px
+	.header__h-search
+		display: none
+	.h-buttons__link
+		width: 76px
+		height: 100px
+	.header__line
+		height: 100px
+	.h-buttons__link svg
+		height: 32px
+		fill: #606060
+	.page__p-redbaner
+		width: 50%
+		padding-right: 15px
+		float: left
+		margin-top: 30px
+	.page__p-questions-last
+		width: 50%
+		padding-left: 15px
+		float: right
+		margin-top: 30px
+	.p-redbaner
+		margin-bottom: 0
+	.p-questions-last
+		height: 311px
+	.page__p-sectionwrapper
+		margin-top: 40px
+		margin-bottom: 28px
+	.p-prodelement__price b
+		font-size: 16px
+	.p-prodelement__description
+		font-size: 12px
+		line-height: 19px
+		height: 38px
+	.p-sectionslider span
+		margin-right: 0
+	.p-sectionslider__arrow
+		display: none
+	.owl-dots
+		text-align: center
+		font-size: 0
+		margin-top: 32px
+	.owl-dot
+		display: inline-block
+		margin: 0 6px
+		background-color: #d9d9d9 !important
+		border-radius: 50%
+		width: 16px
+		height: 16px
+	.owl-dot.active
+		background-color: #db3333 !important
+	.page__p-carousel
+		margin-bottom: 60px
+	.p-neededhelp__right
+		padding-left: 0
+	.p-neededhelp__title
+		font-size: 20px
+		text-align: center
+		display: block
+		max-width: 366px
+		width: 100%
+		margin-left: auto
+		margin-right: auto
+	.p-neededhelp__description
+		margin-top: 3px
+		font-size: 16px
+		text-align: center
+		max-width: 366px
+		width: 100%
+		margin-left: auto
+		margin-right: auto
+	.p-neededhelp__right
+		margin-top: 12px
+	.p-neededhelp
+		padding-top: 16px
+		padding-bottom: 26px
+		padding-left: 68px
+		padding-right: 68px
+		height: auto
+	.p-neededhelp__button
+		font-size: 16px
+	.page__p-sectionwrapper
+		padding-right: 204px
+	.p-sectionslider span
+		font-weight: 500
+	.white-section .page__p-sectionwrapper
+		margin-top: 48px
+		margin-bottom: 32px
+	.white-section__img
+		width: 230px
+		right: -109px
+		top: -57px
+	.page__p-sectioninfo
+		right: 50px
+	.hidden-md
+		display: none
+	.p-carousel3
+		margin-bottom: 50px
+	.page__p-carousel
+		margin-bottom: 30px
+	.footer__top
+		background-repeat: no-repeat
+		background-size: auto 100%
+		padding-top: 37px
+		height: auto
+		.p-neededhelp__left
+			margin-top: 18px
+		.p-neededhelp__title
+			margin-left: 15px
+			text-align: left
+		.p-neededhelp__description
+			margin-left: 15px
+			text-align: left
+		.p-neededhelp__description
+			margin-top: 0
+	.p-neededhelp__input
+		font-size: 16px
+	.f-contacts
+		display: -webkit-flex
+		display: -moz-flex
+		display: -ms-flex
+		display: -o-flex
+		display: flex
+		justify-content: space-between
+	.footer__f-contacts
+		margin-top: 40px
+	.f-contacts__phone
+		width: 20%
+		font-size: 13px
+		margin-bottom: 0
+		text-align: left
+	.f-contacts__email
+		width: 40%
+		text-align: left
+		font-size: 13px
+		margin-bottom: 0
+	.f-contacts__social
+		width: 20%
+		margin-top: 4px
+	.f-contacts__link
+		height: 19px
+	.f-contacts__link svg
+		height: 19px
+	.footer__center
+		padding-bottom: 40px
+
 	/**/
 
 
 /* Small Devices, Tablets */
-@media only screen and (max-width : 768px)
+@media only screen and (max-width : 767px)
+	.h-logo
+		height: 29px
+	.header__h-phone
+		display: none
+	.h-buttons__link,
+	.header__line
+		height: 56px
+	.h-buttons__link
+		width: 60px
+		svg
+			height: 15px
+	.header__bottom
+		display: none
+	.p-indexbanner
+		height: 188px
+		&::after
+			height: 50px
+	.p-indexbanner__title
+		font-size: 28px
+		left: 15px
+		line-height: 40px
+		margin-top: -25px
+		font-family: "Oswald", sans-serif
+		font-weight: 500
+	.p-questions
+		height: 218px
+		padding: 12px
+	.p-questions__title
+		font-size: 14px
+		line-height: 20px
+		max-width: 115px
+	.page__p-questions
+		margin-bottom: 15px
+	.p-questions__link
+		font-size: 12px
+		line-height: 18px
+	.p-questions__list
+		padding-top: 13px
+	.p-questions__item
+		padding-bottom: 10px
+	.p-questions
+		background-size: 168px auto
+	.page__p-redbaner
+		width: 100%
+		padding-right: 0
+		float: none
+		margin-bottom: 15px
+		margin-top: 0
+	.page__p-questions-last
+		width: 100%
+		padding-left: 0
+		margin-top: 0
+	.p-questions-last .p-questions__item
+		width: 100%
+	.p-redbaner
+		height: 218px
+	.p-redbaner__count
+		font-size: 60px
+	.p-redbaner__description
+		font-size: 14px
+		line-height: 54 / 3 + px
+		margin-top: 0
 	/**/
 
 
 /* Extra Small Devices, Phones */
-@media only screen and (max-width : 480px)
-	/**/
-
-
-/* Custom, iPhone Retina */
-@media only screen and (max-width : 320px)
+@media only screen and (max-width : 479px)
 	/**/
 
 
@@ -41,11 +371,17 @@
 
 /* Small Devices, Tablets */
 @media only screen and (min-width : 768px)
+	.h-buttons__item-mob
+		display: none
 	/**/
 
 
 /* Medium Devices, Desktops */
 @media only screen and (min-width : 992px)
+	.h-buttons__item-tablet
+		display: none
+	.visible-md
+		display: none
 	/**/
 
 
