--- a/sass/_elements.sass
+++ b/sass/_elements.sass
@@ -446,6 +446,7 @@
 		color: $graylight
 		font-size: 14px
 		line-height: 21px
+		display: block
 		margin-bottom: 7px
 		font-weight: 500
 	&__description
